# GNNPowerSystem

./: .gitignore  MODEL_CARD.md  README.md  main.py  pyproject.toml
Paper/: Evaluation.md  Feature_Audit.md  ModelArchitecture.md  Paper_Sections.md  Plan.md  Progress_Report.md  Remediation_Plan.md  Results.md  Simulation_Results.md  Statistical_Tests.md  Submission_Package.md  note.md  overview.md  scale-up-results.md  scale-up.md
Paper/Final Version For Review/: 01_introduction.tex  02_related_work.tex  03_problem_formulation.tex  04_methodology.tex  05_experimental_setup.tex  06_results.tex  07_discussion.tex  08_conclusion.tex  citations.bib  main.tex  references.bib
Paper/sections/: 00_Abstract.md  01_Introduction.md  02_Related_Work.md  03_Problem_Formulation.md  04_Method.md  05_Experimental_Setup.md  (+10 more)
analysis/: PHASE3_COMPLIANCE_REPORT.md  generate_supplementary.py  generate_tables.py  run_all.py  verify_consistency.py
configs/: base.yaml  debug.yaml  splits.yaml
dashboard/: README.md  docker-compose.yml
experiments/: contrastive_ssl_comparison.md
scripts/: eval_explanations.py  eval_physics_robustness.py  eval_robustness_extended.py  eval_robustness_multiseed.py  finetune_cascade.py  generate_activsg500_figures.py  generate_explainability_figure.py  generate_method_overview.py  generate_new_figures.py  generate_submission.py  inspect_dataset.py  pretrain_ssl.py  pretrain_ssl_pf.py  run_ablations.py  run_graphmae_comparison.py  run_ssl_masking_ablation.py  smoke_test.py  train_cascade.py  train_pf_opf.py  trivial_baselines.py  verify_phase1.py
(+126 files in other folders)
